== Change Log

=== SVN
* Refactor locals from _node.rhtml into Admin::NodeHelper. [Sean Cribbs]
* Fix XHTML validation errors in view templates. [Bjorn Maeland]
* Update Prototype and script.aculo.us to 1.6 and 1.8 releases. [Sean Cribbs]
* Fix edge case in tabcontrol.js where tab label is incorrect. [Sean Cribbs]
* Remove duplication in admin.js. [Sean Cribbs]
* Factor TimeZone stuff out of Radiant::Config into a module, fix failing tests.
  [Sean Cribbs]
* Add has_part?, inherits_part?, and has_or_inherits_part? methods to Page.
  [ana]
* Allow setting of local timezone via Radiant::Config and auto-adjustment of times
  in admin UI and <r:date /> tag. [Bodhi Philpot]
* Update to latest Prototype and script.aculo.us and refactor and extract inline 
  Javascript into external files. [Mislav Marohnic]
* Narrow scope of exception to only throw on missing fixture files, allowing 
  invalid yaml errors through. [Daniel Sheppard]
* Added tests to ensure that response_cache stays within the cache dir. 
  [Daniel Sheppard]
* Add assert_requires_login to LoginTestHelper. [Sean Cribbs]
* Make sure tag binding stack is popped when an exception occurs. [jay@jay.fm]
* Clean up some apparent cruft in page.rb [Daniel Sheppard]
* Add logout method to LoginTestHelper. [Sean Cribbs]
* Run single extension tests with rake test:extensions EXT=<extension_name>
  [Brian Skahan]
* Update Javascript libraries to Prototype 1.6.0_rc1 and script.aculo.us 
  1.8.0_pre1. [Mislav Marohnic]
* Fixed <r:attempted_url /> tag to escape the uri [Daniel Sheppard]
* Allow parts to be accessed by name from Page#part before they are saved.
  [Sean Cribbs]
* Disambiguate namespace of ActionMailer::Part. [Sean Cribbs]
* Fix namespacing problem with ActionController::RoutingError. [Sean Cribbs]
* Update Rails to 1.2.5. [John Long]
* Ensured that the request and response are passed along to other pages that
  are rendered within the same context. [John Long]